--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/native": "^6.1.1",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
